--- a/web_app/mysite/read/templates/read/teacher/teacher_base.html
+++ b/web_app/mysite/read/templates/read/teacher/teacher_base.html
@@ -32,10 +32,6 @@
 	          </li>
 
 	          <li>
-	               <a href="{% url 'teacher_profile_view' %}">Profile</a>
-	          </li>
-
-	          <li>
                 <a href="{% url 'logout_view' %}">Logout</a>
 	          </li>
 
@@ -55,25 +51,12 @@
               <span class="sr-only">Toggle Menu</span>
             </button>
 
-              <h3 style="font-weight: bold; padding-left: 20px; padding-top: 5px;"> R E A D</h3>
+              <h3 style="font-weight: bold; padding-left: 20px; padding-top: 5px; position: relative; left:-670px;"> R E A D</h3>
 
             <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fa fa-bars"></i>
             </button>
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="nav navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'teacher_classes_view' %}">Classes</a>
-                </li>
-                <li class="nav-item">
-                     <a class="nav-link" href="{% url 'teacher_profile_view' %}">Profile</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'logout_view' %}">Logout</a>
-                </li>
-              </ul>
-            </div>
           </div>
         </nav>
 
@@ -85,14 +68,6 @@
       </div>
 		</div>
 
-<!--
-    <div class="sidenav">
-        <a href="{% url 'teacher_classes_view' %}">Classes</a>
-        <a href="{% url 'teacher_profile_view' %}">Profile</a>
-        <a href="{% url 'logout_view' %}">Logout</a>
-    </div>
-
- -->
 </body>
 </html>
 
