--- a/web_app/mysite/read/templates/read/student/student_base.html
+++ b/web_app/mysite/read/templates/read/student/student_base.html
@@ -41,7 +41,7 @@
 	          </li>
 
 	          <li>
-                  <a href="{% url 'student_profile_view' %}">Profile</a>
+                  <a href="{% url 'student_photo_view' %}">Photo</a>
 	          </li>
 
 	          <li>
