--- a/web_app/mysite/read/templates/read/teacher/teacher_base.html
+++ b/web_app/mysite/read/templates/read/teacher/teacher_base.html
@@ -40,6 +40,10 @@
                 <a href="{% url 'logout_view' %}">Logout</a>
 	          </li>
 
+                <li>
+                <a href="api/api">Document List</a>
+	          </li>
+
 	        </ul>
 
 	      </div>
@@ -73,10 +77,14 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'logout_view' %}">Logout</a>
                 </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="api/api"> Document List</a>
+                  </li>
               </ul>
             </div>
           </div>
         </nav>
+
 
            <div class="main">
             {% block content %}
