google sign-in added

--- a/web_app/mysite/read/templates/read/teacher/teacher_base.html
+++ b/web_app/mysite/read/templates/read/teacher/teacher_base.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="google-signin-client_id" content="85958446821-jhr5i6n801965esodnoal3dv4af8tc7g.apps.googleusercontent.com">
     <title> READ</title>
 
     <!-- some font links-->
@@ -30,9 +31,9 @@
 	          <li class="active">
                   <a href="{% url 'teacher_classes_view' %}">Classes</a>
 	          </li>
-
+<!--{% url 'logout_view' %}-->
 	          <li>
-                <a href="{% url 'logout_view' %}">Logout</a>
+                <a  onclick="signOut();">Logout</a>
 	          </li>
 
                 <li>
@@ -83,6 +84,21 @@
       </div>
 		</div>
 
+        <script src="https://apis.google.com/js/platform.js?onload=onload" async defer></script>
+        <script type="text/javascript">
+            function onload() {
+                gapi.load('auth2', function() {
+                    gapi.auth2.init();
+                });
+            }
+            function signOut() {
+                console.log('clicked');
+                var auth2 = gapi.auth2.getauthinstance();
+                auth2.signOut().then(function () {
+                    console.log('user signed out.');
+                });
+            }
+        </script>
 </body>
 </html>
 
