--- a/web_app/mysite/read/templates/read/login.html
+++ b/web_app/mysite/read/templates/read/login.html
@@ -39,7 +39,7 @@
              <br>
 
 
-             <div class="g-signin2" data-onsuccess="onSignIn"></div>
+             <div class="g-signin2" data-onsuccess="onSignIn" style="position: relative; left: 250px"></div>
 
              <h4>Don't have an account?<a href="{% url 'register_view' %}">Register</a> here! </h4>
 
